--- a/lionproject/blog/templates/detail.html
+++ b/lionproject/blog/templates/detail.html
@@ -10,5 +10,7 @@
     {{blog.writer}} {{blog.pub_date}}
     <hr />
     <p>{{blog.body}}</p>
+    <br />
+    <div><a href="{%url 'home'%}">홈으로</a></div>
   </body>
 </html>
