--- a/lionproject/blog/templates/new.html
+++ b/lionproject/blog/templates/new.html
@@ -6,4 +6,6 @@
   <p>작성자: <input type="text" name="writer" /></p>
   본문: <textarea name="body" id="" cols="30" row="10"></textarea>
   <button type="submit">submit</button>
+  <br />
+  <div><a href="{%url 'home'%}">홈으로</a></div>
 </form>
