--- a/lionproject/blog/templates/home.html
+++ b/lionproject/blog/templates/home.html
@@ -8,7 +8,7 @@
   <body>
     <h1>The Climb Life</h1>
     <div>
-      <a href="{%url 'new' count %}">write problem</a>
+      <a href="{%url 'new'%}">write problem</a>
     </div>
     <div>
       <p>{{count}}</p>
@@ -18,7 +18,7 @@
       <div>
         <h3>{{blog.title}}</h3>
         {{blog.writer}} {{blog.summary}}
-        <a href="{%url 'detail' blog.id blog.title %}">...more</a><br />
+        <a href="{%url 'detail' blog.id%}">...more</a><br />
       </div>
       {% endfor %}
     </div>
