--- a/lionproject/lionproject/templates/base.html
+++ b/lionproject/lionproject/templates/base.html
@@ -36,6 +36,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if user.is_authenticated %}
             <li class="nav-item">
               <a
                 class="nav-link active"
@@ -45,8 +46,16 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="{%url 'logout'%}">Logout</a>
             </li>
+            {%endif%} {% if not user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{%url 'signup'%}">SignUp</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{%url 'login'%}">Login</a>
+            </li>
+            {%endif%}
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
