--- a/lionproject/blog/templates/detail.html
+++ b/lionproject/blog/templates/detail.html
@@ -5,7 +5,7 @@
 <p>{{blog.body}}</p>
 <br />
 {% if blog.image %}
-<p><img src="{{blog.image.url}}" alt="" /></p>
+<p><img src="{{blog.image.url}}" width="200" alt="" /></p>
 <br />
 {% endif %}
 <p>{{id}}</p>
